[feat] Stop showing key bindings on mobile devices

--- a/css/piano.css
+++ b/css/piano.css
@@ -112,7 +112,8 @@ a:visited {
 .key > span {
   font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
+  /* left: 45%; */
   font-size: 0.7em;
   color: black;
 }
